Pages overlapping at smaller res fix

--- a/my-portfolio/src/css/pages.css
+++ b/my-portfolio/src/css/pages.css
@@ -1,6 +1,6 @@
 .page {
-    height: 100vh;
-    min-height: max-content;
+    height: max-content;
+    min-height: 100vh;
     text-align: center;
 }
 
